fix: vertical align wifi icon

--- a/.dotfile/dot_rice-manager/rices/wasabi/dotfile-bar/styles.css
+++ b/.dotfile/dot_rice-manager/rices/wasabi/dotfile-bar/styles.css
@@ -147,6 +147,7 @@ body,
   color: var(--color-green);
   font-size: 1.6rem;
   margin-right: 0.2rem;
+  transform: translateY(0.15rem);
 }
 
 .cpu-icon {
